Bug 426241 - Actions (Buy, Sell, Dividend) are not translated is some reports
Summary: Actions (Buy, Sell, Dividend) are not translated is some reports
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-06 11:32 UTC by antoine
Modified: 2026-06-09 07:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
test case (12.19 KB, text/xml)
2025-05-27 18:30 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2020-09-06 11:32:37 UTC
SUMMARY

Actions (Buy, Sell, Dividend) are not translated is some reports

STEPS TO REPRODUCE
1. open a kmm file (make sure that the application language is not english)
2. open a report, "Investment Transactions" for example
3. 

OBSERVED RESULT
Actions (Buy, Sell, Dividend) are not translated

EXPECTED RESULT
Actions should be translated

SOFTWARE/OS VERSIONS
xubuntu 20.04

ADDITIONAL INFORMATION
Actions (Buy, Sell, Dividend) do not appear in the kmymoney.po file
Comment 1 Ralf Habacker 2025-05-27 18:30:59 UTC
Created attachment 181789 [details]
test case

This is still an issue in version 5.1.95 and newer.
Comment 2 Bug Janitor Service 2025-05-27 19:07:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/office/kmymoney/-/merge_requests/276
Comment 3 Ralf Habacker 2025-06-28 14:32:56 UTC
Git commit dc951f9068b7121c6b45e6aa2e6a90717abd031a by Ralf Habacker.
Committed on 28/06/2025 at 10:42.
Pushed by habacker into branch 'master'.

Fix 'Actions (Buy, Sell, Dividend) are not translated is some reports'
FIXED-IN:5.3

M  +71   -1    kmymoney/mymoney/mymoneysplit.cpp
M  +3    -1    kmymoney/mymoney/mymoneysplit.h
M  +8    -8    kmymoney/plugins/views/reports/core/querytable.cpp
M  +4    -4    kmymoney/plugins/views/reports/core/tests/data/test-investment-report-querytable-Investment-Transactions-_Customized_.csv
M  +5    -5    kmymoney/plugins/views/reports/core/tests/querytable-test.cpp

https://invent.kde.org/office/kmymoney/-/commit/dc951f9068b7121c6b45e6aa2e6a90717abd031a
Comment 4 Thomas Baumgart 2025-06-29 06:03:13 UTC
Git commit 74ceb534f3e0e98277daee5aec9975a37627862d by Thomas Baumgart, on behalf of Ralf Habacker.
Committed on 29/06/2025 at 06:02.
Pushed by tbaumgart into branch '5.2'.

Fix 'Actions (Buy, Sell, Dividend) are not translated is some reports'
FIXED-IN:5.2.1

(cherry picked from commit dc951f9068b7121c6b45e6aa2e6a90717abd031a)

M  +71   -1    kmymoney/mymoney/mymoneysplit.cpp
M  +3    -1    kmymoney/mymoney/mymoneysplit.h
M  +8    -8    kmymoney/plugins/views/reports/core/querytable.cpp
M  +4    -4    kmymoney/plugins/views/reports/core/tests/data/test-investment-report-querytable-Investment-Transactions-_Customized_.csv
M  +5    -5    kmymoney/plugins/views/reports/core/tests/querytable-test.cpp

https://invent.kde.org/office/kmymoney/-/commit/74ceb534f3e0e98277daee5aec9975a37627862d
Comment 5 Ralf Habacker 2026-06-09 07:06:04 UTC
Git commit dfb0045928b8dd86be6c156b1021597c2d966aca by Ralf Habacker.
Committed on 09/06/2026 at 06:59.
Pushed by habacker into branch 'master'.

Add additional report test cases

The test cases were derived from tickets reporting bugs
in the reporting engine and were added to monitor the
relevant functionality.
Related: bug 385993, bug 396301, bug 403825, bug 406403, bug 406525, bug 416274, bug 441023, bug 452096, bug 452692, bug 498031, bug 498033, bug 498054, bug 499180

M  +15   -0    kmymoney/plugins/views/reports/core/tests/data/CMakeLists.txt
A  +46   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-385993-report-querytable-Investitionsentwicklung-nach-Typen-_angepasst_.csv
A  +6    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-396301-report-querytable-Investment-Capital-Gains-by-Account-_Customized---no-conversion_.csv
A  +6    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-396301-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv
A  +6    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-396301-report-querytable-Investment-Performance-by-Account-_Customized_.csv
A  +22   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-396301-report-querytable-Investment-Transactions-_Customized_.csv
A  +7    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-403825-report-querytable-Transactions-by-Account-_Customized_.csv
A  +4    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-403825-report-querytable-Transactions-by-Payee-_Customized_.csv
A  +12   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-416274-report-querytable-Investment-Performance-by-Account-_12m_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-426241-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-426241-report-querytable-Investment-Holdings-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-426241-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year--start-later_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-426241-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-426241-report-querytable-Investment-Performance-by-Account-_Customized---from-period---three-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-426241-report-querytable-Investment-Performance-by-Account-_Customized---from-period---two-years_.csv
A  +27   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-426241-report-querytable-Investment-Transactions-_Customized_.csv
A  +9    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-452096-report-querytable-Transactions-by-Category-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-452692-report-querytable-Investment-Performance-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-452692-report-querytable-Investment-Performance-by-Account-_From-Period_---one-year.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-452692-report-querytable-Investment-Performance-by-Account-_Only-Owned_---until-2024.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-452692-report-querytable-Investment-Performance-by-Account-_Only-Owned_-one-year.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-452692-report-querytable-Kopie-von-Investment-Performance-by-Account-_From-Period_---until-2024.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-497935-report-querytable-Investment-Capital-Gains-by-Account-_custom-report---only-owned_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-497935-report-querytable-Investment-Performance-by-Account-_custom-report---only-owned_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-497935-report-querytable-Investment-Performance-by-Account-_custom-report---only-sold_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-497935-report-querytable-Investment-Performance-by-Account-_custom-report---owned-and-sold_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-497935-report-querytable-Investment-Performance-by-Account-_custom-report---period_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498031-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498031-report-querytable-Investment-Holdings-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498031-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year--start-later_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498031-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498031-report-querytable-Investment-Performance-by-Account-_Customized---from-period---three-year_.csv
A  +27   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498031-report-querytable-Investment-Transactions-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498033-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498033-report-querytable-Investment-Holdings-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498033-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year--start-later_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498033-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498033-report-querytable-Investment-Performance-by-Account-_Customized---from-period---three-year_.csv
A  +27   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498033-report-querytable-Investment-Transactions-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498054-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498054-report-querytable-Investment-Holdings-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498054-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year--start-later_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498054-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-498054-report-querytable-Investment-Performance-by-Account-_Customized---from-period---three-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-499180-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-499180-report-querytable-Investment-Holdings-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-499180-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year--start-later_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-499180-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-499180-report-querytable-Investment-Performance-by-Account-_Customized---from-period---three-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-499180-report-querytable-Investment-Performance-by-Account-_Customized---from-period---two-years_.csv
A  +27   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-499180-report-querytable-Investment-Transactions-_Customized_.csv
A  +16   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-516585-convert-currency-report-querytable-Transactions-by-Account-_Base-converted_.csv
A  +17   -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-516585-convert-currency-report-querytable-Transactions-by-Account-_Base-unconverted_.csv
A  +1744 -0    kmymoney/plugins/views/reports/core/tests/data/test-385993.xml
A  +145  -0    kmymoney/plugins/views/reports/core/tests/data/test-396301.xml
A  +76   -0    kmymoney/plugins/views/reports/core/tests/data/test-403825.xml
A  +85   -0    kmymoney/plugins/views/reports/core/tests/data/test-406403.xml
A  +87   -0    kmymoney/plugins/views/reports/core/tests/data/test-406525.xml
A  +145  -0    kmymoney/plugins/views/reports/core/tests/data/test-416274.xml
A  +154  -0    kmymoney/plugins/views/reports/core/tests/data/test-426241.xml
A  +288  -0    kmymoney/plugins/views/reports/core/tests/data/test-441023.xml
A  +76   -0    kmymoney/plugins/views/reports/core/tests/data/test-452096.xml
A  +201  -0    kmymoney/plugins/views/reports/core/tests/data/test-452692.xml
A  +106  -0    kmymoney/plugins/views/reports/core/tests/data/test-497935.xml
A  +151  -0    kmymoney/plugins/views/reports/core/tests/data/test-498031.xml
A  +151  -0    kmymoney/plugins/views/reports/core/tests/data/test-498033.xml
A  +148  -0    kmymoney/plugins/views/reports/core/tests/data/test-498054.xml
A  +154  -0    kmymoney/plugins/views/reports/core/tests/data/test-499180.xml
A  +151  -0    kmymoney/plugins/views/reports/core/tests/data/test-516585-convert-currency.xml

https://invent.kde.org/office/kmymoney/-/commit/dfb0045928b8dd86be6c156b1021597c2d966aca