Fix 'Actions (Buy, Sell, Dividend) are not translated is some reports'

BUG:426241
FIXED-IN:5.2.1

(cherry picked from commit dc951f9068b7121c6b45e6aa2e6a90717abd031a)